--- a/business-details.html
+++ b/business-details.html
@@ -389,7 +389,9 @@
                     </label>
                   </div>
 
-                  <button type="button" class="submit-btn">Post Review</button>
+                  <button type="button" id="postReview" class="submit-btn">
+                    Post Review
+                  </button>
                 </form>
               </div>
               <div class="recentReviewsTab">
@@ -1019,7 +1021,7 @@
 
     <script src="assets/js/jquery-3.6.0.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/sweetalert.min.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="https://www.google.com/recaptcha/api.js"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"
@@ -1030,6 +1032,13 @@
     <script src="assets/js/main.js"></script>
 
     <script>
+      $("#postReview").click(function () {
+        swal(
+          "Thanks!",
+          "Your review has been successfully submitted.",
+          "success"
+        );
+      });
       $("#year").datepicker({
         format: "yyyy",
         viewMode: "years",
