--- a/peer-review-list.html
+++ b/peer-review-list.html
@@ -154,7 +154,10 @@
 
           <div class="filter-search">
             <div class="row">
-              <div class="col-md-4"><p>Filter Search</p></div>
+              <div class="col-md-12"><p>Filter Search</p></div>
+              <div class="col-md-4">
+                <input type="text" placeholder="Search" />
+              </div>
               <div class="col-md-4">
                 <select name="" id="">
                   <option value="">Company Name</option>
@@ -166,9 +169,6 @@
                 </select>
               </div>
               <div class="col-md-4">
-                <input type="text" placeholder="Search" />
-              </div>
-              <div class="col-md-4">
                 <select name="" id="">
                   <option value="">Salary Range</option>
                 </select>
@@ -177,6 +177,9 @@
                 <select name="" id="">
                   <option value="">Grade or Experience</option>
                 </select>
+              </div>
+              <div class="col-md-4">
+                <button type="button">Apply</button>
               </div>
             </div>
           </div>
