Milestone 5 first commit

--- a/404.html
+++ b/404.html
@@ -90,7 +90,7 @@
       <p>
         Ooops! the page you are looking for does exist or may have been moved.
       </p>
-      <a href=""><button type="button">Back to Home</button></a>
+      <a href="./"><button type="button">Back to Home</button></a>
     </div>
 
     <footer>
