--- a/peer-review-list.html
+++ b/peer-review-list.html
@@ -156,7 +156,7 @@
             <div class="row">
               <div class="col-md-12"><p>Filter Search</p></div>
               <div class="col-md-4">
-                <input type="text" placeholder="Search" />
+                <input class="search" type="text" placeholder="Search" />
               </div>
               <div class="col-md-4">
                 <select name="" id="">
