--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -212,6 +212,9 @@
     <footer>
       <div class="row">
         <div class="col-lg-4">
+          <div class="footer-logo">
+            <img src="assets/images/footer-logo.png" alt="" />
+          </div>
           <p>
             This platform for minority groups to express their opinions on
             employment, workplace experiences and rate employers.
