Week 5 Milestones completed

--- a/business-sub.html
+++ b/business-sub.html
@@ -71,21 +71,12 @@
           />
         </a>
 
-        <div class="navbar-account">
-          <img src="assets/images/airbnb.png" alt="" />
-          <i class="fa fa-caret-down"></i>
-          <ul class="account-dropdown">
-            <a href="">
-              <li>Profile</li>
-            </a>
-            <a href="">
-              <li>Logout</li>
-            </a>
-          </ul>
+        <div class="dash-menu-icon">
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
         </div>
-        <ul class="navigation2">
-          <li>Hi, Airbnb</li>
-        </ul>
       </div>
     </header>
     <!-- Header end -->
@@ -129,49 +120,53 @@
             </p>
           </div>
         </div>
-        <div class="row row-flex">
-          <div class="col-lg-4">
-            <div class="info-box">
-              <div class="icon" style="background: #f5f0fa">
-                <img src="assets/images/rate-review.png" alt="" />
-              </div>
-              <div class="info-details">
-                <h3>Overall rating</h3>
-                <ul>
-                  <li>Total number of reviews: 12</li>
-                  <li>Average rating: 17</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="info-box">
-              <div class="icon" style="background: #effaf1">
-                <img src="assets/images/bx-group.png" alt="" />
-              </div>
-              <div class="info-details">
-                <h3>Minority Group</h3>
-                <ul>
-                  <li>Total number of reviews by minority: 67</li>
-                  <li>Average rating by minority: 29</li>
-                  <li>
-                    Total number of persons talking about this business per
-                    minority: 456
-                  </li>
-                </ul>
+
+        <div class="dash-info">
+          <span class="dash-info-close">&times;</span>
+          <div class="row row-flex">
+            <div class="col-lg-4">
+              <div class="info-box">
+                <div class="icon" style="background: #f5f0fa">
+                  <img src="assets/images/rate-review.png" alt="" />
+                </div>
+                <div class="info-details">
+                  <h3>Overall rating</h3>
+                  <ul>
+                    <li>Total number of reviews: 12</li>
+                    <li>Average rating: 17</li>
+                  </ul>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="info-box">
-              <div class="icon" style="background: #ffebff">
-                <img src="assets/images/topic.png" alt="" />
+            <div class="col-lg-4">
+              <div class="info-box">
+                <div class="icon" style="background: #effaf1">
+                  <img src="assets/images/bx-group.png" alt="" />
+                </div>
+                <div class="info-details">
+                  <h3>Minority Group</h3>
+                  <ul>
+                    <li>Total number of reviews by minority: 67</li>
+                    <li>Average rating by minority: 29</li>
+                    <li>
+                      Total number of persons talking about this business per
+                      minority: 456
+                    </li>
+                  </ul>
+                </div>
               </div>
-              <div class="info-details">
-                <h3>Topics</h3>
-                <ul>
-                  <li>Total number of interaction by topics: 56</li>
-                </ul>
+            </div>
+            <div class="col-lg-4">
+              <div class="info-box">
+                <div class="icon" style="background: #ffebff">
+                  <img src="assets/images/topic.png" alt="" />
+                </div>
+                <div class="info-details">
+                  <h3>Topics</h3>
+                  <ul>
+                    <li>Total number of interaction by topics: 56</li>
+                  </ul>
+                </div>
               </div>
             </div>
           </div>
