--- a/peer-review-list.html
+++ b/peer-review-list.html
@@ -179,7 +179,7 @@
                 </select>
               </div>
               <div class="col-md-4">
-                <button type="button">Apply</button>
+                <button class="filter-btn" type="button">Apply</button>
               </div>
             </div>
           </div>
