--- a/overall-details.html
+++ b/overall-details.html
@@ -71,21 +71,12 @@
           />
         </a>
 
-        <div class="navbar-account">
-          <img src="assets/images/airbnb.png" alt="" />
-          <i class="fa fa-caret-down"></i>
-          <ul class="account-dropdown">
-            <a href="">
-              <li>Profile</li>
-            </a>
-            <a href="">
-              <li>Logout</li>
-            </a>
-          </ul>
+        <div class="dash-menu-icon">
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
         </div>
-        <ul class="navigation2">
-          <li>Hi, Airbnb</li>
-        </ul>
       </div>
     </header>
     <!-- Header end -->
@@ -116,12 +107,25 @@
         <h3>Overall Rating</h3>
         <div class="row row-flex stat">
           <div class="col-lg-6">
-            <div class="info-box-3">
+            <div class="info-box-3 total-review">
               <h6>Total review</h6>
-              <div class="total-review">
-                <div class="review-progress">Total review: 1000</div>
+              <div class="progress">
+                <div
+                  class="progress-bar"
+                  role="progressbar"
+                  style="width: 70%"
+                  aria-valuenow="70"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                >
+                  1000
+                </div>
                 <span>Off 100k</span>
               </div>
+              <!-- <div class="total-review">
+                <div class="review-progress">Total review: 1000</div>
+                <span>Off 100k</span>
+              </div> -->
             </div>
           </div>
           <div class="col-lg-6">
@@ -187,11 +191,13 @@
           <div class="col-lg-4">
             <div class="info-box-3">
               <h6>Overall breakdown per category</h6>
+              <div id="breakdownByCat"></div>
             </div>
           </div>
           <div class="col-lg-4">
             <div class="info-box-3">
               <h6>Overall breakdown by minority groups</h6>
+              <div id="breakdownByGroup"></div>
             </div>
           </div>
         </div>
@@ -207,8 +213,90 @@
       referrerpolicy="no-referrer"
     ></script>
     <script src="assets/js/croppie.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
 
     <script src="assets/js/main.js"></script>
     <script src="assets/js/tagsinput.js"></script>
+    <script>
+      var options = {
+        series: [45, 20, 10, 10, 15],
+        chart: {
+          type: "pie",
+        },
+        labels: ["Racism", "Nepotism", "Assault", "Pressure", "Harrassment"],
+        colors: ["#6c1b1b", "#ba4a25", "#ff6634", "#ff9573", "#ffe5dd"],
+        legend: {
+          position: "bottom",
+        },
+        toolbar: {
+          show: false,
+        },
+        dataLabels: {
+          enabled: false,
+          style: {
+            fontSize: "11px",
+            fontWeight: 600,
+          },
+          dropShadow: {
+            enabled: false,
+          },
+        },
+      };
+
+      var chart = new ApexCharts(
+        document.querySelector("#breakdownByCat"),
+        options
+      );
+      chart.render();
+
+      // Bar Chart
+      var options = {
+        series: [
+          {
+            name: "",
+            data: [44, 55, 41, 37, 22, 43, 21],
+          },
+          {
+            name: "",
+            data: [53, 32, 33, 52, 13, 43, 32],
+          },
+        ],
+        colors: ["#ff9573", "#ffe5dd"],
+        chart: {
+          type: "bar",
+          height: 350,
+          stacked: true,
+          toolbar: {
+            show: false,
+          },
+        },
+        xaxis: {
+          show: false,
+          categories: [
+            "Sexual Harrassment",
+            "Racism",
+            "Nepotism",
+            "Sexual Assault",
+            "Nepotism",
+            "Racism",
+          ],
+        },
+        yaxis: {
+          show: false,
+        },
+        fill: {
+          opacity: 1,
+        },
+        legend: {
+          show: false,
+        },
+      };
+
+      var chart = new ApexCharts(
+        document.querySelector("#breakdownByGroup"),
+        options
+      );
+      chart.render();
+    </script>
   </body>
 </html>
