Week 5 Milestones completed

--- a/timeline.html
+++ b/timeline.html
@@ -935,6 +935,22 @@
       </div>
     </div>
 
+    <div class="refresh-prompt">
+      &#8593;
+      <ul>
+        <li>
+          <img src="assets/images/Ellipse 1.png" alt="" />
+        </li>
+        <li>
+          <img src="assets/images/Ellipse 2.png" alt="" />
+        </li>
+        <li>
+          <img src="assets/images/Ellipse 3.png" alt="" />
+        </li>
+      </ul>
+      Blabs
+    </div>
+
     <!-- Profile Img modal -->
     <div
       class="modal fade"
