Homepage Aligment issues solved

--- a/index.html
+++ b/index.html
@@ -102,32 +102,34 @@
     <div class="hero">
       <div class="row">
         <div class="col-lg-6">
-          <div class="caption">
-            <h2 class="animation-element slide-up">
-              Grow your business <br />
-              with real-time reviews
-            </h2>
-            <p class="animation-element slide-up">
-              Find out more on what people and saying about your company, with
-              real time reveiw and data.
-            </p>
-            <div class="hero-search">
-              <input
-                type="text"
-                placeholder="Search for Companies"
-                autocomplete="off"
-                class="animation-element"
-              />
-              <button
-                type="button"
-                class="hero-search-btn animation-element slide-right"
-              >
-                Search
-              </button>
+          <div class="b1">
+            <div class="caption">
+              <h2 class="animation-element slide-up">
+                Grow your business <br />
+                with real-time reviews
+              </h2>
+              <p class="animation-element slide-up">
+                Find out more on what people and saying about your company, with
+                real time reveiw and data.
+              </p>
+              <div class="hero-search">
+                <input
+                  type="text"
+                  placeholder="Search for Companies"
+                  autocomplete="off"
+                  class="animation-element"
+                />
+                <button
+                  type="button"
+                  class="hero-search-btn animation-element slide-right"
+                >
+                  Search
+                </button>
+              </div>
+              <p class="animation-element slide-up">
+                Already have an account? <a href="">Sign In</a>
+              </p>
             </div>
-            <p class="animation-element slide-up">
-              Already have an account? <a href="">Sign In</a>
-            </p>
             <div class="quote animation-element">
               <span id="quote"
                 >A life spent making mistakes is not only more honorable, but
@@ -136,9 +138,11 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-6 hero-right">
-          <div class="hero-img">
-            <img id="heroImg" src="assets/images/hero.png" alt="" />
+        <div class="col-lg-6">
+          <div class="b1">
+            <div class="hero-img">
+              <img id="heroImg" src="assets/images/hero.png" alt="" />
+            </div>
             <div class="review">
               <div class="review-info">
                 <div class="rating">
