Landing page reworked

--- a/timeline-user-page.html
+++ b/timeline-user-page.html
@@ -177,6 +177,7 @@
           </div>
         </div>
         <div class="col-lg-6 middleDiv">
+          <div class="nav-back"><i class="fa fa-arrow-left"></i></div>
           <div class="blab">
             <div class="blab-img">
               <img src="assets/images/Ellipse 2.png" alt="" />
