Other fixes done

--- a/business-details.html
+++ b/business-details.html
@@ -400,7 +400,8 @@
                 </form>
               </div>
               <div class="recentReviewsTab">
-                <div class="recent-review">
+                <div class="sorry">Oooops! No reviews for this blab yet.</div>
+                <!-- <div class="recent-review">
                   <div class="recent-review-img">
                     <img src="assets/images/Ellipse 1.png" alt="" />
                   </div>
@@ -478,7 +479,7 @@
                       definitely try their tom yum noodle soup next time
                     </p>
                   </div>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
