--- a/login.html
+++ b/login.html
@@ -75,30 +75,30 @@
               </div>
               <p>Sign in to your account with your email address</p>
               <ul class="signup-options">
-                <a href="">
+                <button type="button">
                   <li class="linkedin">
                     <img
                       src="assets/images/continue-with-linkedin.svg"
                       alt=""
                     />
                     Continue with Linkedin
-                  </li></a
-                >
-                <a href=""
-                  ><li class="facebook">
+                  </li>
+                </button>
+                <button type="button">
+                  <li class="facebook">
                     <img
                       src="assets/images/continue-with-facebook.svg"
                       alt=""
                     />
                     Continue with Facebook
-                  </li></a
-                >
-                <a href=""
-                  ><li class="google">
+                  </li>
+                </button>
+                <button type="button">
+                  <li class="google">
                     <img src="assets/images/continue-with-google.png" alt="" />
                     Continue with Google
-                  </li></a
-                >
+                  </li>
+                </button>
               </ul>
               <h6>OR</h6>
 
