Other fixes done

--- a/timeline.html
+++ b/timeline.html
@@ -405,15 +405,15 @@
                   Great place to work with the good work culture and people
                   skills by the readable of a page when looking at its layout
                   the point of using lorem ipsum is that it has a more
-                  <span class="year-of-occurence"
-                    ><i class="fa fa-calendar-alt"></i> 2000</span
-                  >
                 </p>
                 <ul class="blab-tags">
                   <li>racism</li>
                   <li>nepotism</li>
                   <li>sexual harrassment</li>
                 </ul>
+                <div class="year-of-occurence">
+                  <img src="assets/images/calendar.svg" alt="" /> 2000
+                </div>
                 <div class="blab-icons">
                   <ul>
                     <li>
