business details page fixes

--- a/business-details.html
+++ b/business-details.html
@@ -361,7 +361,7 @@
                       <span class="checkmark"></span>
                     </label>
                     <ul class="signup-options">
-                      <button type="button">
+                      <button type="button" disabled>
                         <li class="linkedin">
                           <img
                             src="assets/images/continue-with-linkedin.svg"
@@ -370,7 +370,7 @@
                           Continue with Linkedin
                         </li>
                       </button>
-                      <button type="button">
+                      <button type="button" disabled>
                         <li class="facebook">
                           <img
                             src="assets/images/continue-with-facebook.svg"
@@ -379,7 +379,7 @@
                           Continue with Facebook
                         </li>
                       </button>
-                      <button type="button">
+                      <button type="button" disabled>
                         <li class="google">
                           <img
                             src="assets/images/continue-with-google.png"
